# api/resource/req_ledger.go
@@ -1,11 +1,16 @@
 package resource
 
-// ReqGetLedger represents request for getting ledger.
-type ReqGetLedger struct {
-	LedgerID uint `uri:"id" binding:"min=1"`
+// ReqGetLedgers binds path variable for getting ledgers.
+type ReqGetLedgers struct {
+	UserID string `uri:"user_id" binding:"required"`
 }
 
-// ReqAddLedger represents request body for adding ledger.
+// ReqGetLedger binds path variable for getting a ledger.
+type ReqGetLedger struct {
+	LedgerID uint `uri:"ledger_id" binding:"min=1"`
+}
+
+// ReqAddLedger binds request body for adding ledger.
 type ReqAddLedger struct {
 	UserID string `json:"user_id" binding:"required"`
 	Desc   string `json:"description" binding:"required"`
