# docs/swagger.json
@@ -50,9 +50,9 @@
                 }
             }
         },
-        "/api/household-ledger/ledger/{id}": {
+        "/api/household-ledger/ledger/{ledger_id}": {
             "get": {
-                "description": "Gets ledger with {id} from db.",
+                "description": "Gets ledger with {ledger_id} from db.",
                 "produces": [
                     "application/json"
                 ],
@@ -64,7 +64,7 @@
                     {
                         "type": "string",
                         "description": "ledger id",
-                        "name": "id",
+                        "name": "ledger_id",
                         "in": "path",
                         "required": true
                     }
@@ -74,6 +74,53 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/resource.ResGetLedger"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResErr"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/household-ledger/ledgers/{user_id}": {
+            "get": {
+                "description": "Gets ledgers with {user_id} from db.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ledger"
+                ],
+                "summary": "Get ledgers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/resource.ResGetLedgers"
                         }
                     },
                     "400": {
@@ -210,6 +257,17 @@
                 },
                 "user_id": {
                     "type": "string"
+                }
+            }
+        },
+        "resource.ResGetLedgers": {
+            "type": "object",
+            "properties": {
+                "ledgers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/resource.ResGetLedger"
+                    }
                 }
             }
         },
